[gd_scene load_steps=11 format=3 uid="uid://bmgjeo8ln75xy"]

[ext_resource type="Script" path="res://entites/player/player.gd" id="1_t6lsy"]
[ext_resource type="PackedScene" uid="uid://cfxm13homo3o1" path="res://entites/utility/character_mover.tscn" id="1_x5lu5"]
[ext_resource type="PackedScene" uid="uid://ceeogrhiewpj7" path="res://entites/ui/hud.tscn" id="3_lmym4"]
[ext_resource type="PackedScene" uid="uid://cbwme8va47fbl" path="res://entites/todo_list/todo_list.tscn" id="3_nmb7d"]
[ext_resource type="AudioStream" uid="uid://hrnl0xkhdwee" path="res://assets/music/andrew-egg-beat.ogg" id="5_6db0w"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ul2cx"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6yydi"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_xlv2f"]

[sub_resource type="Sky" id="Sky_g2032"]
sky_material = SubResource("ProceduralSkyMaterial_xlv2f")

[sub_resource type="Environment" id="Environment_hbf4e"]
background_mode = 2
sky = SubResource("Sky_g2032")

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_t6lsy")

[node name="CharacterMover" parent="." instance=ExtResource("1_x5lu5")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_ul2cx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_6yydi")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
environment = SubResource("Environment_hbf4e")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -3, 0)
collision_mask = 2

[node name="HoldPosition" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)

[node name="TodoList" parent="Camera3D" instance=ExtResource("3_nmb7d")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hud" parent="CanvasLayer" instance=ExtResource("3_lmym4")]

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6db0w")
volume_db = -10.0

[connection signal="started_being_able_to_hold" from="." to="CanvasLayer/Hud" method="show_open_hand"]
[connection signal="started_holding" from="." to="CanvasLayer/Hud" method="show_closed_hand"]
[connection signal="stopped_being_able_to_hold" from="." to="CanvasLayer/Hud" method="hide_hands"]
[connection signal="stopped_holding" from="." to="CanvasLayer/Hud" method="show_open_hand"]
